Fixed the index reference to the course hub

--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
             <div class="course-card">
                 <h2>Keybinds Lesson</h2>
                 <p>Learn essential keyboard shortcuts to boost your productivity and efficiency in various applications.</p>
-                <a href="course_content.html" class="button">Start Course</a>
+                <a href="digital literacy shortcuts/hub.html" class="button">Start Course</a>
             </div>
 
             <!-- Course 2: Placeholder Course -->
